--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Library</h1>
+    <button id="addBtn">Add New Book</button>
+    <div id="popupContainer">
+        <form id="formContainer">
+            <h2>Book Form</h2>
+            <div class="formItem">
+                <input type="text" placeholder="Book Title" name = "title"> 
+            </div>
+            <div class="formItem">
+                <input type="text" placeholder="Book Author" name = "author">
+            </div>
+            <div class="formItem">
+                <input type="text" placeholder="Pages" name = "pages">
+            </div>
+            <div class="formItem">
+                <label for="read" id="readLabel"><strong>Read</strong></label>
+                <input type="checkbox" value="true">
+            </div>
+            <div class="formItem">
+                <button class = "addBtn">Add</button>
+            </div>
+
+        </form>
+    </div>
     
+    <div class="container">
+    </div>
     <script src="library.js"></script>
 </body>
 </html>
